--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <a class="copyright__link  copyright__link--image"
           href="https://htmlacademy.ru/intensive/javascript"><img src="./assets/htmla-logo-5045aeb7.svg" width="130"
             height="45" alt="HTML Academy"></a>
-        <p>Сделано в <a class="copyright__link  copyright__link--text"
+        <p>Сделал Максим Григорьев в <a class="copyright__link  copyright__link--text"
             href="https://htmlacademy.ru/intensive/javascript">HTML Academy</a></p>
       </div>
       <ul class="page-footer__contacts  contacts">
